ops/kubeconfig_templates/game-engine-service.yml
apiVersion: v1
kind: Service
metadata:
  name: game-engine
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"8888":"game-engine-backend-config"}}'
spec:
  type: NodePort
  selector:
    app: game-engine
  ports:
    - name: ws-port
      port: 8888
      targetPort: ws-port
